--- a/thedeveloper-style.css
+++ b/thedeveloper-style.css
@@ -3,7 +3,6 @@ body {
 	margin: 10px;
 	color: white;
 	font-family: courier;
-	padding: 0px;
 }
 table {
 	width: 100%;
@@ -33,15 +32,15 @@ a:active {
     text-decoration: underline;
 }
 th {
-	text-align: right;
+	text-align: left;
 	font-size: 140px;
 }
 td {
-	text-align: right;
-	padding-right: 9vw; 
+	text-align: left;
+	padding-left: 9vw; 
 }
 #logo {
-	padding-right: 7vw; 
+	padding-left: 7vw; 
 }
 h1 {
 	font-size: 200%;
@@ -55,10 +54,10 @@ p {
 @media (max-width: 600px) {
 	#logo {
 		font-size: 15vw;
-		padding-right: 10px;
+		padding-left: 10px;
 	}
 	td {
-		padding-right: 5vw;
+		padding-left: 5vw;
 	}
 	.mobile {
 		display: inline;
